--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "emotion": "^9.2.12",
+    "node-sass": "^4.10.0",
+    "styled-components": "^4.1.1"
+  }
 }
