--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@reach/router": "^1.2.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "emotion": "^9.2.12",
