--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "classnames": "^2.2.6",
     "emotion": "^9.2.12",
     "node-sass": "^4.10.0",
+    "react-lazyload": "^2.3.0",
     "styled-components": "^4.1.1"
   }
 }
